--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,19 @@ services:
     networks:
       - app-net
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: apartment-pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+    networks:
+      - app-net
+
   backend:
     build: ./Backend
     container_name: apartment-backend
