--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,14 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
-
+  build-backend:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Frontend Docker image
-      run: docker build -f Frontend/Dockerfile -t my-image-name:${{ github.run_id }} .
+      - uses: actions/checkout@v4
+      - run: docker build -f Backend/Dockerfile -t backend:${{ github.run_id }} .
+
+  build-frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: docker build -f Frontend/Dockerfile -t frontend:${{ github.run_id }} .
