--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: docker build -f Backend/Dockerfile -t backend:${{ github.run_id }} .
+      - run: docker build -f Backend/Dockerfile -t backend:${{ github.run_id }} Backend
 
   build-frontend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: docker build -f Frontend/Dockerfile -t frontend:${{ github.run_id }} .
+      - run: docker build -f Frontend/Dockerfile -t frontend:${{ github.run_id }} Frontend
