--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,39 +57,26 @@ jobs:
 
       
       # รัน Spring Boot container เชื่อมต่อ PostgreSQL ผ่าน localhost
-      - name: Run backend container with PostgreSQL
+      - name: Run backend container with PostgreSQL (test startup only)
         run: |
           docker run --rm --network host \
             -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/apartment_db \
             -e SPRING_DATASOURCE_USERNAME=postgres \
             -e SPRING_DATASOURCE_PASSWORD=admin \
-            backend:${{ github.run_id }}
-      - name: Run backend and test API
-        run: |
-          docker run -d --network host \
-            --name backend-test \
-            -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/apartment_db \
-            -e SPRING_DATASOURCE_USERNAME=postgres \
-            -e SPRING_DATASOURCE_PASSWORD=admin \
-            backend:${{ github.run_id }}
+            backend:${{ github.run_id }} &
       
-          # รอ Spring Boot สตาร์ต
-          echo "Waiting for backend to start..."
-          for i in {1..15}; do
-            if curl -s http://localhost:8080/actuator/health | grep -q "UP"; then
-              echo "Backend is up!"
-              break
-            fi
-            sleep 5
-          done
+          # รอให้ Spring Boot สตาร์ต (ไม่ต้องรอจนค้าง)
+          sleep 15
       
-          # stop container หลังทดสอบเสร็จ
-          docker stop backend-test
-
+          # ตรวจสอบว่ามันเปิดพอร์ต 8080 จริงไหม
+          nc -zv localhost 8080 || (echo "Backend did not start correctly" && exit 1)
       
-      # Optional: Check Java version inside container
-      - name: Check Java runtime inside container
-        run: docker run --rm backend:${{ github.run_id }} java -version
+          echo "Backend started successfully!"
+      
+            
+            # Optional: Check Java version inside container
+            - name: Check Java runtime inside container
+              run: docker run --rm backend:${{ github.run_id }} java -version
 
 
   # ===========================
