--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,11 +55,22 @@ jobs:
           docker run --rm --entrypoint "" backend:${{ github.run_id }} sh -c "ls /app | grep .jar" \
             || (echo 'No JAR file found' && exit 1)
 
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..10}; do
+            if nc -z localhost 5432; then
+              echo "PostgreSQL is ready!"
+              break
+            fi
+            echo "Waiting for PostgreSQL..."
+            sleep 3
+          done
       
       # รัน Spring Boot container เชื่อมต่อ PostgreSQL ผ่าน localhost
       - name: Run backend container with PostgreSQL (test startup only)
         run: |
-          docker run --rm --network host \
+          docker run --rm --network="host" \
+            -e SPRING_CONFIG_LOCATION=classpath:/application.properties \
             -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/apartment_db \
             -e SPRING_DATASOURCE_USERNAME=postgres \
             -e SPRING_DATASOURCE_PASSWORD=admin \
