--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -71,8 +71,8 @@ jobs:
       - name: Run backend container with PostgreSQL (test startup only)
         run: |
           docker run --rm \
-            --network ${{ job.container.network }} \
-            -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/apartment_db \
+            --network host \
+            -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/apartment_db \
             -e SPRING_DATASOURCE_USERNAME=postgres \
             -e SPRING_DATASOURCE_PASSWORD=admin \
             backend:${{ github.run_id }} &
