--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 management.endpoints.web.exposure.include=health
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 
 server.port=8080
 admin.email=admin@apt.com
