--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -73,30 +73,35 @@ jobs:
           DB_CONTAINER=$(docker ps --filter "ancestor=postgres:15" --format "{{.Names}}" | head -n 1)
           NETWORK=$(docker inspect $DB_CONTAINER --format '{{range .NetworkSettings.Networks}}{{.NetworkID}}{{end}}')
           NETWORK_NAME=$(docker network ls --filter id=$NETWORK --format "{{.Name}}")
-      
+
           echo "Found DB container: $DB_CONTAINER on network: $NETWORK_NAME"
-          
-          docker run --rm \
+
+          docker run -d \
+            --name backend_test \
             --network $NETWORK_NAME \
             -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/apartment_db \
             -e SPRING_DATASOURCE_USERNAME=postgres \
             -e SPRING_DATASOURCE_PASSWORD=admin \
-            backend:${{ github.run_id }} &
-      
-          
-            echo "⏳ Waiting for backend to become healthy..."
-            for i in {1..10}; do
-              if curl -sf http://localhost:8080/actuator/health | grep -q "UP"; then
-                echo "Backend is UP!"
-                exit 0
-              fi
-              echo "Waiting ($i/10)..."
-              sleep 5
-            done
-        
-            echo " Backend did not respond UP after timeout"
-            docker ps -a
-            exit 1
+            backend:${{ github.run_id }}
+
+          echo "Waiting for backend port 8080 to be ready..."
+          for i in {1..10}; do
+            if docker exec backend_test sh -c "nc -z localhost 8080"; then
+              echo "Backend port 8080 is open!"
+              docker logs backend_test | tail -n 20
+              docker rm -f backend_test
+              exit 0
+            fi
+            echo "Waiting ($i/10)..."
+            sleep 5
+          done
+
+          echo " Backend port 8080 did not open in time"
+          docker logs backend_test
+          docker ps -a
+          docker rm -f backend_test
+          exit 1
+
 
             
       # Optional: Check Java version inside container
