--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -82,12 +82,13 @@ jobs:
             -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/apartment_db \
             -e SPRING_DATASOURCE_USERNAME=postgres \
             -e SPRING_DATASOURCE_PASSWORD=admin \
+            -p 8080:8080 \
             backend:${{ github.run_id }}
 
-          echo " Waiting for backend port 8080 to be ready..."
+          echo "⏳ Waiting for backend HTTP response..."
           for i in {1..10}; do
-            if docker exec backend_test sh -c "nc -z localhost 8080"; then
-              echo "Backend port 8080 is open!"
+            if curl -sf http://localhost:8080 > /dev/null; then
+              echo "✅ Backend is responding on port 8080!"
               docker logs backend_test | tail -n 15
               docker rm -f backend_test
               exit 0
@@ -96,10 +97,11 @@ jobs:
             sleep 5
           done
 
-          echo "Backend did not open port 8080 in time"
+          echo "❌ Backend did not respond on port 8080 in time"
           docker logs backend_test | tail -n 30
           docker rm -f backend_test
           exit 1
+
 
 
 
