--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -12,6 +12,7 @@ management.endpoints.web.exposure.include=health
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
+server.address=0.0.0.0
 server.port=8080
 admin.email=admin@apt.com
 admin.password=ict555
