--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -73,7 +73,6 @@ jobs:
           DB_CONTAINER=$(docker ps --filter "ancestor=postgres:15" --format "{{.Names}}" | head -n 1)
           NETWORK=$(docker inspect $DB_CONTAINER --format '{{range .NetworkSettings.Networks}}{{.NetworkID}}{{end}}')
           NETWORK_NAME=$(docker network ls --filter id=$NETWORK --format "{{.Name}}")
-
           echo "Found DB container: $DB_CONTAINER on network: $NETWORK_NAME"
 
           docker run -d \
@@ -88,22 +87,23 @@ jobs:
           echo " Waiting 10s before health check..."
           sleep 10
 
-          echo " Checking backend readiness..."
+          echo " Checking from inside network..."
           for i in {1..15}; do
-            if curl -sf http://localhost:8080 > /dev/null; then
-              echo " Backend is responding on port 8080!"
-              docker logs backendtest | tail -n 15
+            docker run --rm --network $NETWORK_NAME curlimages/curl:8.10.1 -sf http://backendtest:8080/actuator/health > /dev/null && {
+              echo " Backend is responding inside network!"
+              docker logs backendtest | tail -n 20
               docker rm -f backendtest
               exit 0
-            fi
+            }
             echo "Waiting ($i/15)..."
             sleep 5
           done
 
-          echo " Backend did not respond on port 8080 in time"
+          echo " Backend did not respond in time"
           docker logs backendtest | tail -n 40
           docker rm -f backendtest
           exit 1
+
 
 
             
