--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -3,6 +3,7 @@ server {
     server_name localhost;
 
     root /usr/share/nginx/html;
+    index index.html;
 
     location / {
         index index.html;
@@ -11,6 +12,7 @@ server {
 
     # proxy ไป backend
     location /api/ {
-        proxy_pass http://backend:8080;
-    }
+        proxy_pass http://backend-service:8080;
+        proxy_set_header Host $host;
+}
 }
