--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,6 +13,9 @@ jobs:
   build-backend:
     name: Build Backend (Spring Boot)
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: bash
     services:
       db:
         image: postgres:15
