--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Print environment (debug)
         run: |
+          echo "=================== START =================="
           echo "OS: $env:OS"
           echo "REGISTRY_URL=$env:REGISTRY_URL"
           echo "Done"
