--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -151,7 +151,7 @@ jobs:
       #  Apply manifests (optional)
       - name: Apply Kubernetes manifests
         run: |
-          kubectl apply -f k8s/postgres-deployment.yaml
+          kubectl apply -f k8s/postgres-deployment.yaml --validate=false
           kubectl apply -f k8s/backend-deployment.yaml
           kubectl apply -f k8s/backend-service.yaml
           kubectl apply -f k8s/frontend-deployment.yaml
