feat(helm): update full apartment chart configuration for argocd deployment

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     # proxy ไป backend
     location /api/ {
-        proxy_pass http://backend-service:8080;
+        proxy_pass http://apartment-apartment-chart-backend-service.argocd.svc.cluster.local:8080;
         proxy_set_header Host $host;
 }
 }
