--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -130,41 +130,54 @@ jobs:
   # Deploy to Kubernetes Cluster
   # ===========================
   deploy:
-    name: Deploy to Kubernetes
+    name: Deploy to Kubernetes (Helm)
     runs-on: ubuntu-latest
     needs: [build-backend, build-frontend]
-
+  
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+  
       - name: Setup kubectl
         uses: azure/setup-kubectl@v4
         with:
           version: 'latest'
-
+  
+      - name: Setup Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: 'latest'
+  
       - name: Configure kubeconfig
         run: |
           mkdir -p ~/.kube
           echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
-
-      #  Apply manifests (optional)
-      - name: Apply Kubernetes manifests
+  
+      # ==========================
+      # Update image tags in values.yaml dynamically
+      # ==========================
+      - name: Update image tags dynamically
         run: |
-          kubectl apply -f k8s/postgres-deployment.yaml --validate=false
-          kubectl apply -f k8s/backend-deployment.yaml
-          kubectl apply -f k8s/backend-service.yaml
-          kubectl apply -f k8s/frontend-deployment.yaml
-          kubectl apply -f k8s/frontend-service.yaml
-          kubectl apply -f k8s/backend-ingress.yaml
-          kubectl apply -f k8s/frontend-ingress.yaml
-
-      #  Update container images
-      - name: Update container images
+          echo "Updating image tags with Git SHA..."
+          sed -i "s|tag:.*|tag: \"${{ github.sha }}\"|g" k8s/apartment-chart/values.yaml
+  
+      # ==========================
+      # Helm deploy / upgrade
+      # ==========================
+      - name: Deploy using Helm
         run: |
-          kubectl set image deployment/backend-deployment backend=${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
-          kubectl set image deployment/frontend-deployment frontend=${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
-
-          echo " Waiting for rollout..."
-          kubectl rollout status deployment/backend-deployment
-          kubectl rollout status deployment/frontend-deployment
+          helm upgrade --install apartment ./k8s/apartment-chart \
+            --namespace argocd \
+            --set backend.image.repository=${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend \
+            --set backend.image.tag=${{ github.sha }} \
+            --set frontend.image.repository=${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend \
+            --set frontend.image.tag=${{ github.sha }} \
+            --wait --timeout 300s
+  
+      # ==========================
+      # Verify rollout status
+      # ==========================
+      - name: Verify Deployment Rollout
+        run: |
+          kubectl rollout status deployment/apartment-apartment-chart-backend -n argocd
+          kubectl rollout status deployment/apartment-apartment-chart-frontend -n argocd
