--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI/CD (Kubernetes)
+name: Docker Image CI/CD (ArgoCD GitOps)
 
 on:
   push:
@@ -7,177 +7,69 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # ===========================
+  # ==========================================
   # Build Backend (Spring Boot)
-  # ===========================
+  # ==========================================
   build-backend:
-    name: Build Backend (Spring Boot)
     runs-on: ubuntu-latest
-    # defaults:
-    #   run:
-    #     shell: bash
-    services:
-      db:
-        image: postgres:15
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: admin
-          POSTGRES_DB: apartment_db
-          REGISTRY_URL: docker.io
-          REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-          REGISTRY_PASSWORD: ${{ secrets.REGISTRY_TOKEN }}
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
     steps:
-      - name: Print environment (debug)
-        run: |
-          echo "=================== START =================="
-          echo "Done"
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      
-
 
       - name: Build backend Docker image
         run: docker build -f Backend/Dockerfile -t backend:${{ github.run_id }} Backend
 
-      - name: Verify backend JAR file exists
-        run: |
-          docker run --rm --entrypoint "" backend:${{ github.run_id }} sh -c "ls /app | grep .jar" \
-            || (echo 'No JAR file found' && exit 1)
-
-      - name: Confirm image built successfully
-        run: docker images backend:${{ github.run_id }}
-
-      - name: Check Java runtime inside container
-        run: docker run --rm --entrypoint java backend:${{ github.run_id }} -version
-
-      - name: Debug registry variables
-        run: |
-          echo "REGISTRY_URL: ${{ secrets.REGISTRY_URL }}"
-          echo "REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}"
-
-
-      #  Push Backend image to registry
       - name: Login to Container Registry
         run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
 
-      - name: Tag & Push backend image
+      - name: Push backend image
         run: |
           docker tag backend:${{ github.run_id }} ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
           docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
 
-
-  # ===========================
+  # ==========================================
   # Build Frontend (Vite / React)
-  # ===========================
+  # ==========================================
   build-frontend:
-    name: Build Frontend (Vite)
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Cache Node modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            Frontend/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('Frontend/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
 
       - name: Build frontend Docker image
         run: docker build -f Frontend/Dockerfile -t frontend:${{ github.run_id }} Frontend
 
-      - name: Verify frontend dist directory
-        run: |
-          docker run --rm frontend:${{ github.run_id }} sh -c "ls /usr/share/nginx/html" || (echo 'Frontend dist not found' && exit 1)
-
-      - name: Check Nginx runtime inside container
-        run: docker run --rm frontend:${{ github.run_id }} nginx -v
-
-      #  Push Frontend image to registry
       - name: Login to Container Registry
         run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
 
-      - name: Tag & Push frontend image
+      - name: Push frontend image
         run: |
           docker tag frontend:${{ github.run_id }} ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
           docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
 
-
-  # ===========================
-  # Deploy to Kubernetes Cluster
-  # ===========================
-  deploy:
-    name: Deploy to Kubernetes (Helm)
+  # ==========================================
+  # Update Helm Chart values (GitOps trigger)
+  # ==========================================
+  update-helm-values:
     runs-on: ubuntu-latest
     needs: [build-backend, build-frontend]
-  
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-  
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v4
         with:
-          version: 'latest'
-  
-      - name: Setup Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: 'latest'
-  
-      - name: Configure kubeconfig
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update image tags in values.yaml
         run: |
-          mkdir -p ~/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
-  
-      # ==========================
-      # Update image tags in values.yaml dynamically
-      # ==========================
-      - name: Update image tags dynamically
-        run: |
-          echo "Updating image tags with Git SHA..."
+          sed -i "s|repository:.*apartment-backend.*|repository: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend|" k8s/apartment-chart/values.yaml
           sed -i "s|tag:.*|tag: \"${{ github.sha }}\"|g" k8s/apartment-chart/values.yaml
-  
-      # ==========================
-      # Helm deploy / upgrade
-      # ==========================
-      - name: Deploy using Helm
+          sed -i "s|repository:.*apartment-frontend.*|repository: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend|" k8s/apartment-chart/values.yaml
+
+      - name: Commit and push updated values.yaml
         run: |
-          helm upgrade --install apartment ./k8s/apartment-chart \
-            --namespace argocd \
-            --set backend.image.repository=${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend \
-            --set backend.image.tag=${{ github.sha }} \
-            --set frontend.image.repository=${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend \
-            --set frontend.image.tag=${{ github.sha }} \
-            --wait --timeout 300s
-  
-      # ==========================
-      # Verify rollout status
-      # ==========================
-      - name: Verify Deployment Rollout
-        run: |
-          kubectl rollout status deployment/apartment-apartment-chart-backend -n argocd
-          kubectl rollout status deployment/apartment-apartment-chart-frontend -n argocd
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add k8s/apartment-chart/values.yaml
+          git commit -m "chore(ci): update image tags to ${{ github.sha }} for ArgoCD sync"
+          git push
