--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,6 +70,8 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
+          git pull --rebase origin ${{ github.ref_name }}
           git add k8s/apartment-chart/values.yaml
-          git commit -m "chore(ci): update image tags to ${{ github.sha }} for ArgoCD sync"
-          git push
+          git commit -m "chore(ci): update image tags to ${{ github.sha }} for ArgoCD sync" || echo "No changes to commit"
+          git push origin HEAD:${{ github.ref_name }}
+
