--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,12 +16,39 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      #  Step 1: Setup JDK
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      #  Step 2: Cache Gradle packages (optional but recommended)
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      #  Step 3: Run Unit Tests
+      - name: Run Unit Tests
+        working-directory: Backend
+        run: |
+          ./gradlew test --no-daemon
+
+      #  Step 4: Build Docker Image
       - name: Build backend Docker image
         run: docker build -f Backend/Dockerfile -t backend:${{ github.run_id }} Backend
 
+      #  Step 5: Login to Registry
       - name: Login to Container Registry
         run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
 
+      #  Step 6: Push Image
       - name: Push backend image
         run: |
           docker tag backend:${{ github.run_id }} ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
