--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,22 +8,29 @@ on:
 
 jobs:
   # ==========================================
-  # Build Backend (Spring Boot)
+  # Build & Test Backend
   # ==========================================
-  build-backend:
+  build-and-test-backend:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: admin
+          POSTGRES_DB: apartment_db
+        options: >-
+          --health-cmd="pg_isready -U postgres -d apartment_db"
+          --health-interval=5s
+          --health-timeout=5s
+          --health-retries=10
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      #  Step 1: Setup JDK
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      #  Step 2: Cache Gradle packages (optional but recommended)
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -33,31 +40,38 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-            
-      #  Step 3: Run Unit Tests
-      - name: Run Unit Tests
-        working-directory: Backend
+
+      - name: Wait for PostgreSQL
         run: |
-          chmod +x gradlew
-          ./gradlew test --no-daemon
+          until pg_isready -h localhost -U postgres; do sleep 2; done
 
-      - name: Upload Test Report (HTML)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-test-report
-          path: Backend/build/reports/tests/test
+      - name: Load schema and seed data
+        run: |
+          sudo apt-get install -y postgresql-client
+          psql -h localhost -U postgres -d apartment_db -f db/schema.sql
+          psql -h localhost -U postgres -d apartment_db -f db/seed.sql
+        env:
+          PGPASSWORD: admin
 
+      - name: Run backend tests
+        working-directory: Backend
+        run: ./gradlew test
 
-      #  Step 4: Build Docker Image
+  # ==========================================
+  # Push Backend Image (after test passes)
+  # ==========================================
+  push-backend:
+    runs-on: ubuntu-latest
+    needs: build-and-test-backend
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Build backend Docker image
         run: docker build -f Backend/Dockerfile -t backend:${{ github.run_id }} Backend
 
-      #  Step 5: Login to Registry
       - name: Login to Container Registry
         run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
 
-      #  Step 6: Push Image
       - name: Push backend image
         run: |
           docker tag backend:${{ github.run_id }} ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
