--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,8 +48,7 @@ jobs:
       - name: Load schema and seed data
         run: |
           sudo apt-get install -y postgresql-client
-          psql -h localhost -U postgres -d apartment_db -f db/schema.sql
-          psql -h localhost -U postgres -d apartment_db -f db/seed.sql
+          psql -h localhost -U postgres -d apartment_db -f db/apartment_db
         env:
           PGPASSWORD: admin
 
