--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,7 +54,9 @@ jobs:
 
       - name: Run backend tests
         working-directory: Backend
-        run: ./gradlew test
+        run: |
+          chmod +x gradlew
+          ./gradlew test
 
   # ==========================================
   # Push Backend Image (after test passes)
