--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,6 +66,65 @@ jobs:
           path: Backend/build/reports/tests/test
 
   # ==========================================
+  # End-to-End Tests (Cypress)
+  # ==========================================
+  e2e-tests:
+    runs-on: ubuntu-latest
+    needs: [build-frontend, build-backend]
+
+    services:
+      backend:
+        image: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
+        ports:
+          - 8080:8080
+        options: >-
+          --health-cmd="curl -f http://localhost:8080/actuator/health || exit 1"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=10
+
+      frontend:
+        image: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
+        ports:
+          - 3000:3000
+        options: >-
+          --health-cmd="curl -f http://localhost:3000 || exit 1"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=10
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install Cypress dependencies
+        working-directory: e2e
+        run: npm ci
+
+      - name: Wait for services
+        run: |
+          echo "Waiting for frontend and backend..."
+          until curl -f http://localhost:3000; do sleep 5; done
+          until curl -f http://localhost:8080/actuator/health; do sleep 5; done
+
+      - name: Run Cypress E2E Tests
+        working-directory: e2e
+        run: npx cypress run --browser chrome
+
+      - name: Upload Cypress Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-report
+          path: e2e/cypress/reports
+
+
+  # ==========================================
   # Push Backend Image (after test passes)
   # ==========================================
   build-backend:
