--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,64 +106,71 @@ jobs:
           docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
 
   # ==========================================
-  # End-to-End Tests (Cypress)
-  # ==========================================
-  e2e-tests:
-    runs-on: ubuntu-latest
-    needs: [build-frontend, build-backend]
+# End-to-End Tests (Cypress)
+# ==========================================
+e2e-tests:
+  runs-on: ubuntu-latest
+  needs: [build-frontend, build-backend]
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Login to Container Registry
-        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
+    - name: Login to Container Registry
+      run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
 
-      - name: Pull latest images
-        run: |
-          docker pull ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
-          docker pull ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
+    - name: Pull latest images
+      run: |
+        docker pull ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
+        docker pull ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
 
-      - name: Start containers for E2E test
-        run: |
-          docker network create test-net
-          docker run -d --name backend --network test-net -p 8080:8080 \
-            ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
-          docker run -d --name frontend --network test-net -p 3000:3000 \
-            ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
+    - name: Start containers for E2E test
+      run: |
+        docker network create test-net
+        # Backend
+        docker run -d --name backend --network test-net -p 8080:8080 \
+          ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
+        # Frontend (Nginx port 80 → expose 3000)
+        docker run -d --name frontend --network test-net -p 3000:80 \
+          ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
 
-      - name: Wait for services
-        run: |
-          echo "Waiting for frontend and backend..."
-          until curl -f http://localhost:3000; do sleep 5; done
-          until curl -f http://localhost:8080/actuator/health; do sleep 5; done
+    - name: Wait for services
+      run: |
+        echo "Waiting for frontend..."
+        timeout=0
+        until curl -f http://localhost:3000 || [ $timeout -ge 60 ]; do sleep 5; timeout=$((timeout+5)); done
 
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+        echo "Waiting for backend..."
+        timeout=0
+        until curl -f http://localhost:8080/actuator/health || [ $timeout -ge 60 ]; do sleep 5; timeout=$((timeout+5)); done
 
-      - name: Install Cypress dependencies
-        working-directory: e2e
-        run: npm ci
+    - name: Install Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
-      - name: Run Cypress E2E Tests
-        working-directory: e2e
-        run: npx cypress run --browser chrome
+    - name: Install Cypress dependencies
+      working-directory: e2e
+      run: npm ci
 
-      - name: Upload Cypress Report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-report
-          path: e2e/cypress/reports
+    - name: Run Cypress E2E Tests
+      working-directory: e2e
+      run: npx cypress run --browser chrome --config baseUrl=http://localhost:3000
 
-      - name: Stop containers
-        if: always()
-        run: |
-          docker stop backend frontend
-          docker rm backend frontend
-          docker network rm test-net
+    - name: Upload Cypress Report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: cypress-report
+        path: e2e/cypress/reports
+
+    - name: Stop containers
+      if: always()
+      run: |
+        docker stop backend frontend
+        docker rm backend frontend
+        docker network rm test-net
+
 
   # ==========================================
   # Update Helm Chart values (GitOps trigger)
